@@ -65,10 +65,12 @@ class ServiceDiagnosticsImpl(val bc:BundleContext) extends ServiceDiagnostics
     }
 
     //debug helper
-    def json(l:Iterable[Node]) = l.toList.foldLeft(new org.json.JSONArray()) { (j,n) => 
-      j.put(new org.json.JSONObject(new java.util.HashMap[String,java.util.List[String]] {{
-          put(n.name, new java.util.ArrayList[String] {{ addAll(n.edges.map(_.name)) }})
-        }}))
+    def json(l:Iterable[Node]) = l.toList.sortWith { (n1,n2) => 
+        n1.name < n2.name
+    }.foldLeft(new org.json.JSONArray()) { (j,n) => 
+        j.put(new org.json.JSONObject(new java.util.HashMap[String,java.util.List[String]] {{
+            put(n.name, new java.util.ArrayList[String] {{ addAll(n.edges.map(_.name)) }})
+          }}))
     }.toString(2)
 
     /**
